<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sensorcontroller.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/devList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_start"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btn_start" >
    </ListView>

    <TextView
        android:id="@+id/record_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/devList"
        android:text="@string/tag_rate" />

    <CheckBox
        android:id="@+id/gyroEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/magEnable"
        android:layout_below="@+id/accEnable"
        android:text="@string/gyro_enable" />

    <CheckBox
        android:id="@+id/magEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gyroEnable"
        android:layout_toRightOf="@+id/devList"
        android:text="@string/mag_enable" />

    <Spinner
        android:id="@+id/acc_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/magEnable"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/magEnable" />

    <Spinner
        android:id="@+id/gyro_scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/acc_scale"
        android:layout_toRightOf="@+id/devList" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/action_scan" />

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_scan"
        android:layout_alignBottom="@+id/btn_scan"
        android:layout_centerHorizontal="true"
        android:text="@string/action_start" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/record_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_msg"
        android:layout_below="@+id/txt_msg"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gyro_scale"
        android:layout_toRightOf="@+id/devList"
        android:ems="10"
        android:hint="@string/txt_msg"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btn_apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/record_id"
        android:layout_below="@+id/record_id"
        android:text="@string/action_apply" />

    <CheckBox
        android:id="@+id/accEnable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/smpl_rate"
        android:layout_toRightOf="@+id/devList"
        android:text="@string/acc_enable" />

    <Spinner
        android:id="@+id/smpl_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/record_info"
        android:layout_toRightOf="@+id/devList" />

</RelativeLayout>