<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tag_battery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txt_device_name"
        android:text="@string/tag_battery_level" />

    <TextView
        android:id="@+id/txt_device_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/tag_device_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ProgressBar
        android:id="@+id/battery_level"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tag_battery_level" />

    <TextView
        android:id="@+id/tag_file_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/battery_level"
        android:layout_marginTop="18dp"
        android:layout_toRightOf="@+id/txt_file_num"
        android:text="@string/tag_file_num" />

    <TextView
        android:id="@+id/txt_conn_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tag_file_num"
        android:layout_alignBottom="@+id/tag_file_num"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:text="@string/conn_status_offline" />

    <TextView
        android:id="@+id/txt_file_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/tag_file_num" />

</RelativeLayout>
